--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"mongoose": "^8.1.1",
 		"nodemailer": "^6.9.9",
 		"nodemon": "^3.0.3",
-		"pug": "^3.0.2"
+		"pug": "^3.0.2",
+		"three": "^0.161.0"
 	}
 }
